Improve for sonar