@@ -81,7 +81,7 @@ class SurveyUnitUpdateMongoAdapterTest {
 		List< SurveyUnitUpdateDto> updates = surveyUnitUpdateMongoAdapter.findByIds("UE1100000001", "TEST2023X01");
 		// Then
 		Assertions.assertThat(updates).isNotNull().hasSize(2);
-		Assertions.assertThat(updates.get(0).getMode()).isEqualTo(Mode.WEB);
+		Assertions.assertThat(updates.getFirst().getMode()).isEqualTo(Mode.WEB);
 	}
 
 	@Test
@@ -105,7 +105,7 @@ class SurveyUnitUpdateMongoAdapterTest {
 		List< SurveyUnitUpdateDto> updates = surveyUnitUpdateMongoAdapter.findByIdUE("UE1100000001");
 		// Then
 		Assertions.assertThat(updates).isNotNull().hasSize(2);
-		Assertions.assertThat(updates.get(0).getMode()).isEqualTo(Mode.WEB);
+		Assertions.assertThat(updates.getFirst().getMode()).isEqualTo(Mode.WEB);
 	}
 
 	@Test
@@ -129,18 +129,18 @@ class SurveyUnitUpdateMongoAdapterTest {
 		// When
 		Stream< SurveyUnitUpdateDto> updates = surveyUnitUpdateMongoAdapter.findByIdQuestionnaire("TEST2023X01");
 		// Then
-//		Assertions.assertThat(updates).isNotNull().hasSize(3);
-//		Assertions.assertThat(updates.get(2).getMode()).isEqualTo(Mode.WEB);
+		Assertions.assertThat(updates).isNotNull().hasSize(3);
+		//Assertions.assertThat(updates.get(2).getMode()).isEqualTo(Mode.WEB);
 	}
 
 	@Test
 	void shouldReturnEmptyList_IfIdQuestionnaireNotFoundInDataBase() {
 		//Given
-		//when(mongoRepository.findByIdQuestionnaire(any(String.class))).thenReturn(List.of());
+		when(mongoRepository.findByIdQuestionnaire(any(String.class))).thenReturn(Stream.empty());
 		// When
-		//List< SurveyUnitUpdateDto> updates = surveyUnitUpdateMongoAdapter.findByIdQuestionnaire("TEST2023X01");
+		Stream< SurveyUnitUpdateDto> updates = surveyUnitUpdateMongoAdapter.findByIdQuestionnaire("TEST2023X01");
 		// Then
-		//Assertions.assertThat(updates).isEmpty();
+		Assertions.assertThat(updates).isEmpty();
 	}
 
 	@Test
@@ -160,7 +160,7 @@ class SurveyUnitUpdateMongoAdapterTest {
 		List< SurveyUnitUpdateDto> updates = surveyUnitUpdateMongoAdapter.findByIdUEsAndIdQuestionnaire(ids, "TEST2023X01");
 		// Then
 		Assertions.assertThat(updates).isNotNull().hasSize(3);
-		Assertions.assertThat(updates.get(0).getMode()).isEqualTo(Mode.WEB);
+		Assertions.assertThat(updates.getFirst().getMode()).isEqualTo(Mode.WEB);
 	}
 
 	@Test
